# hw6-hmm-viterbi

./: .gitignore  .readthedocs.yml  README.md  example_user_cases-Copy1.ipynb  pyproject.toml
.github/workflows/: main.yml
data/: PersonalCase.npz  PersonalCase2.npz  ProjectDeliverable-PrimitiveCMs.npz  ProjectDeliverable-ProgenitorCMs.npz  UserCase-Lecture.npz  UserCase-One.npz
docs/source/: conf.py  index.rst  models.rst
env/: hw6-hmm-viterbi.yml
notebooks/: example_user_cases.ipynb  user_case_one.ipynb
src/models/: __init__.py  decoders.py  hmm.py
test/: test_project_deliverable.py  test_user_case.py
